--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,7 @@
 
 {deps,
   [
-   %% {meck, ".*", {git, "git://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
-   %% {reloader, ".*", {git, "git://github.com/sile/reloader.git", {tag, "0.1.0"}}},
-   %% {edown, ".*", {git, "git://github.com/sile/edown.git", {tag, "0.3.2"}}}
+   {meck, ".*", {git, "git://github.com/eproxus/meck.git", {tag, "0.8.2"}}},
+   {reloader, ".*", {git, "git://github.com/sile/reloader.git", {tag, "0.1.0"}}},
+   {edown, ".*", {git, "git://github.com/sile/edown.git", {tag, "0.3.2"}}}
   ]}.
